--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel
-DB_PASSWORD=secret
+DB_PASSWORD=password
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
